mofica footer con fixed e z-index

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,9 @@ main>section>div{
 
 
 footer{
+    position: fixed;
+    z-index: 2;
     background-color: aqua;
     height: 70px;
+    width: 100%;
 }
